[package]
name = "error-code"
version = "0.2.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Alternative Error for Rust"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/error-code"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies.libc]
version = "0.2"
default-features = false

[dependencies.ufmt]
version = "0.1"
default-features = true
optional = true

[dev-dependencies.ufmt-stdio]
version = "0.1"

[features]
std = []

[package.metadata.docs.rs]
features = ["std"]
