[package]
name = "error-code"
version = "3.0.0-beta.5"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Error code"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/error-code"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[target.'cfg(any(windows, unix))'.dependencies.libc]
version = "0.2"
default-features = false

[features]
std = []

[package.metadata.docs.rs]
features = ["std"]
